[package]
name = "ttfins"
version = "0.1.0"
authors = ["rrandom <emanonhere@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ttf-parser = "0.6.1"
iced = {path="../../rust-play/iced", features = ["canvas", "tokio", "debug", "async-std"]}
rand = "0.7"
nfd = "0.0.4"
async-std = "1.6.0"


[dev-dependencies]
chrono = "0.4"
rand = "0.7"
